# hyenas

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
examples/: select.hy
src/hyenas/: __init__.py  manipulation.py  metadata.py  selection.py  sink.py
