[metadata]
name = hyenas
version = 0.0.1
description = Crudely fitted Hy handle on top of Pandas
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = pandas, hy, hylang
license = MIT
classifiers =
    Framework :: Django
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where = src